Bug 447639 - Background color/opacity of the image does not change if you quickly close the Image properties window
Summary: Background color/opacity of the image does not change if you quickly close th...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-29 12:17 UTC by rybak77.lol
Modified: 2022-01-05 13:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rybak77.lol 2021-12-29 12:17:49 UTC
SUMMARY
Background color and opacity of the image do not change instantly, so if you manage to close the Image properties window before the changes take place, they will never happen.

STEPS TO REPRODUCE
1. Open Image properties window.
2. Change Background color or Background opacity
3. Press "OK" before background of the image actually changes

OBSERVED RESULT
Background of the image does not change.

EXPECTED RESULT
Background of the image should change even after the image properties window is closed.

SOFTWARE/OS VERSIONS
Krita
  Version: 5.0.0
Qt
  Version (compiled): 5.12.12
  Version (loaded): 5.12.12
OS Information
  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.17763
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10
Comment 1 wolthera 2021-12-29 12:19:40 UTC
Yeah, noticed this too...
Comment 2 Dmitry Kazakov 2022-01-05 13:48:54 UTC
Git commit 67aca79fb73c697f587158685da85cb45ff98ee1 by Dmitry Kazakov.
Committed on 05/01/2022 at 13:48.
Pushed by dkazakov into branch 'master'.

Make sure that projection color change command is compressible

M  +2    -1    libs/command/kis_command_ids.h
M  +11   -7    libs/image/commands_new/kis_change_projection_color_command.cpp
M  +3    -1    libs/image/commands_new/kis_change_projection_color_command.h
M  +2    -1    libs/image/kis_layer_utils.cpp

https://invent.kde.org/graphics/krita/commit/67aca79fb73c697f587158685da85cb45ff98ee1
Comment 3 Dmitry Kazakov 2022-01-05 13:49:02 UTC
Git commit 6c65b71e3fc9ddcbcb64a057b2c909692128c941 by Dmitry Kazakov.
Committed on 05/01/2022 at 13:37.
Pushed by dkazakov into branch 'master'.

Fix image background color not saved when the dialog is closed too quickly

M  +9    -4    libs/ui/dialogs/kis_dlg_image_properties.cc
M  +3    -0    libs/ui/dialogs/kis_dlg_image_properties.h
M  +10   -3    libs/ui/kis_image_manager.cc

https://invent.kde.org/graphics/krita/commit/6c65b71e3fc9ddcbcb64a057b2c909692128c941
Comment 4 Dmitry Kazakov 2022-01-05 13:49:14 UTC
Git commit 20ef8c4e25b2bd38186ad84586cbd26d0d3676e1 by Dmitry Kazakov.
Committed on 05/01/2022 at 13:49.
Pushed by dkazakov into branch 'krita/5.0'.

Fix image background color not saved when the dialog is closed too quickly
(cherry picked from commit 6c65b71e3fc9ddcbcb64a057b2c909692128c941)

M  +9    -4    libs/ui/dialogs/kis_dlg_image_properties.cc
M  +3    -0    libs/ui/dialogs/kis_dlg_image_properties.h
M  +10   -3    libs/ui/kis_image_manager.cc

https://invent.kde.org/graphics/krita/commit/20ef8c4e25b2bd38186ad84586cbd26d0d3676e1
Comment 5 Dmitry Kazakov 2022-01-05 13:49:22 UTC
Git commit f2de16a48594f18066a8a242b3e370221bad8150 by Dmitry Kazakov.
Committed on 05/01/2022 at 13:49.
Pushed by dkazakov into branch 'krita/5.0'.

Make sure that projection color change command is compressible
(cherry picked from commit 67aca79fb73c697f587158685da85cb45ff98ee1)

M  +2    -1    libs/command/kis_command_ids.h
M  +11   -7    libs/image/commands_new/kis_change_projection_color_command.cpp
M  +3    -1    libs/image/commands_new/kis_change_projection_color_command.h
M  +2    -1    libs/image/kis_layer_utils.cpp

https://invent.kde.org/graphics/krita/commit/f2de16a48594f18066a8a242b3e370221bad8150