Fix image background color not saved when the dialog is closed too quickly

BUG:447639
(cherry picked from commit 6c65b71e3fc9ddcbcb64a057b2c909692128c941)